# mydumper

./: CMakeLists.txt  myloader.c  myloader.h
cmake/modules/: PackageRPM.cmake  VersionGit.cmake
cmake/templates/: specfile
